log/build_2024-11-25_16-06-35/turtlebot_controller/stderr.log
  File "/home/ste/my_ros2_ws/install/turtlebot_controller/lib/python3.10/site-packages/script_python/move_turtle_AB.py", line 30
    def def publish_initial_pose(x, y, theta):
        ^^^
SyntaxError: invalid syntax

